@@ -43,7 +43,8 @@
         <string id="32079">Default psp-transcode directory</string>      
         <string id="32080">Delete all files if processing fails</string>   
         <string id="32081">Eject inserted medium if job successfull</string>  
-        <string id="32082">Use ISO-Files instead of device</string>              
+        <string id="32082">Use ISO-Files instead of device</string>  
+        <string id="32083">Allways use default directorys to store</string>               
 
         <!--              --> 
         <!-- Window-Names -->
