@@ -43,7 +43,8 @@
         <string id="32079">Répertoire par défaut pour psp-transcodage</string> 
         <string id="32080">Supprimer tous les fichiers si le traitement échoue</string>  
         <string id="32081">Ejecter le média inséré si le travail est terminé avec succès</string>          
-        <string id="32082">Use File instead of device</string>             
+        <string id="32082">Use ISO-FileS instead of device</string>
+        <string id="32083">Allways use default directorys to store</string>             
   
         <!--              --> 
         <!-- Window-Names -->
